Add example filter code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <main>
       <section>
         <h1>JS1 examples</h1>
+        <input id="search" placeholder="Search..." />
+        <select id="category">
+          <option value="">Select category</option>
+          <option value="posts">Posts</option>
+          <option value="users">Users</option>
+          <option value="comments">Comments</option>
+        </select>
         <div id="posts-container" class="posts-container">
           <p>Loading posts...</p>
         </div>
