--- a/details.html
+++ b/details.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Details</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/details.js" type="module"></script>
+    <script src="js/script.js" type="module"></script>
   </head>
   <body>
     <main>
