Add cart functionality

--- a/confirmation.html
+++ b/confirmation.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Details</title>
+    <title>Confirmation</title>
     <link rel="stylesheet" href="css/style.css" />
     <script
       src="https://kit.fontawesome.com/8923f131c6.js"
       crossorigin="anonymous"
       defer
     ></script>
-    <script src="js/script.js" type="module"></script>
   </head>
   <body>
     <header>
@@ -18,10 +17,8 @@
     </header>
     <main>
       <section>
-        <h1>Details</h1>
-        <div id="details-container" class="details-container">
-          <p>Loading details...</p>
-        </div>
+        <h1>Confirmation</h1>
+        <p>Blah</p>
       </section>
     </main>
   </body>
