--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Details</title>
+    <title>Cart</title>
     <link rel="stylesheet" href="css/style.css" />
     <script
       src="https://kit.fontawesome.com/8923f131c6.js"
@@ -14,14 +14,14 @@
   </head>
   <body>
     <header>
-      <nav id="nav"><a href="/">Home</a> <a href="/cart.html">Cart</a></nav>
+      <nav id="nav">
+        <a href="/">Home</a> <a href="/cart.html" class="active">Cart</a>
+      </nav>
     </header>
     <main>
       <section>
-        <h1>Details</h1>
-        <div id="details-container" class="details-container">
-          <p>Loading details...</p>
-        </div>
+        <h1>Cart</h1>
+        <div id="cart-container" class="cart-container"></div>
       </section>
     </main>
   </body>
