Add extra cart functionality

--- a/details.html
+++ b/details.html
@@ -15,6 +15,10 @@
   <body>
     <header>
       <nav id="nav"><a href="/">Home</a> <a href="/cart.html">Cart</a></nav>
+      <div class="cart-indicator">
+        <i class="fa-solid fa-shopping-cart"></i>
+        <span id="cart-count" class="cart-count"></span>
+      </div>
     </header>
     <main>
       <section>
