--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS1</title>
+    <script
+      src="https://kit.fontawesome.com/8923f131c6.js"
+      crossorigin="anonymous"
+      defer
+    ></script>
     <script src="js/script.js" type="module"></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <header>
+      <nav id="nav">
+        <a href="/" class="active">Home</a> <a href="/cart.html">Cart</a>
+      </nav>
+      <div class="cart-indicator">
+        <i class="fa-solid fa-shopping-cart"></i>
+        <span id="cart-count" class="cart-count"></span>
+      </div>
+    </header>
     <main>
       <section>
         <h1>JS1 examples</h1>
