--- a/cart.html
+++ b/cart.html
@@ -17,6 +17,10 @@
       <nav id="nav">
         <a href="/">Home</a> <a href="/cart.html" class="active">Cart</a>
       </nav>
+      <div class="cart-indicator">
+        <i class="fa-solid fa-shopping-cart"></i>
+        <span id="cart-count" class="cart-count"></span>
+      </div>
     </header>
     <main>
       <section>
